@@ -20,11 +20,13 @@ Unreleased
 - LP #384841:  Add 'use_cache' kw argument to CachingCatalog to disable
   cache for particular searches.
 
-- Moved settings such as 'system_email_domain' to osi.ini.
+- LP #391377: Moved settings such as 'system_email_domain' to osi.ini.
 
 - Stop using a custom KarlSecurityPolicy; this policy was identical to
   the WhoInheritingACLSecurityPolicy in repoze.bfg 0.8+.  Use that one
   instead.
+
+- LP #388096: Made a link to the community delete operation.
 
 3.2 (2009-06-24)
 ----------------
